--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "^5.1.26",
     "firebase": "^9.16.0",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-query": "^3.39.2",
@@ -25,7 +26,6 @@
     "react-slick": "^0.29.0",
     "react-tabs": "^6.0.0",
     "slick-carousel": "^1.8.1",
-    "react-tabs": "^6.0.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
