--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-slick": "^0.23.10",
     "@types/slick-carousel": "^1.6.37",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.2.4",
     "firebase": "^9.16.0",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
@@ -27,6 +28,7 @@
     "react-tabs": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
+    "timeago.js": "^4.0.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
